@@ -10,6 +10,7 @@
 #                                                                       #
 #########################################################################
 
+[49] --> DB/Quest: Fix: The Explorers' League Outpost (11448), We Can Rebuild It (11483) (Thx Pitcrawler)
 [48] --> DB/Quest: Fix: Danger! Explosives! (11218) (Thx Pitcrawler)
 [47] --> DB/Quest: Fix: Quest To Westguard Keep! (11291) (Thx Pitcrawler)
 [46] --> Implement .arena commands - add new commands to the core to handle with arena teams. (Thx Bezo)
